<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="bottomDialogViewModel"
            type="ar.unpa.uarg.collazo.contractgenerator.viewmodel.BottomDialogViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@{bottomDialogViewModel.title}"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            tools:text="Add new property" />

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/buttons"
            android:layout_below="@+id/tv_title">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <Button
                    android:id="@+id/button_select_metric"
                    style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_selector"
                    android:drawableEnd="@drawable/ic_selector"
                    android:gravity="start|center_vertical"
                    android:onClick="@{bottomDialogViewModel::onSelectMetricClick}"
                    android:text="@{bottomDialogViewModel.buttonText}"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/colorTextPrimary"
                    tools:text="Select property" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:layout_marginBottom="12dp"
                    android:background="@color/colorTextSecondary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="6dp"
                    android:text="@string/text_parameter_value"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/colorTextPrimary" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <RadioButton
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="@={bottomDialogViewModel.optionRegular}"
                        android:text="@string/text_parameter_regular"
                        android:textColor="@color/colorTextSecondary" />

                    <RadioButton
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="@={bottomDialogViewModel.optionMiddle}"
                        android:text="@string/text_parameter_middle"
                        android:textColor="@color/colorTextSecondary" />

                    <RadioButton
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="@={bottomDialogViewModel.optionBad}"
                        android:text="@string/text_parameter_good"
                        android:textColor="@color/colorTextSecondary" />

                </RadioGroup>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="6dp"
                    android:text="@string/text_action"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/colorTextPrimary" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:checked="@={bottomDialogViewModel.actionMonitor}"
                    android:text="@string/text_action_monitoring"
                    android:textColor="@color/colorTextSecondary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="6dp"
                    android:text="@string/text_alert"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/colorTextPrimary" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <RadioButton
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="@={bottomDialogViewModel.alertInf}"
                        android:text="@string/text_alert_informative"
                        android:textColor="@color/colorTextSecondary" />

                    <RadioButton
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="@={bottomDialogViewModel.alertConf}"
                        android:text="@string/text_alert_confirmatory"
                        android:textColor="@color/colorTextSecondary" />

                </RadioGroup>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="15dp"
            android:gravity="right"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_close"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{bottomDialogViewModel::onCancelClick}"
                android:text="@string/text_btn_cancel" />

            <Button
                android:id="@+id/button_ok"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{bottomDialogViewModel::onAceptClick}"
                android:text="@string/text_btn_acept" />
        </LinearLayout>

    </RelativeLayout>
</layout>